--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,12 +7,10 @@ spring.mvc.view.suffix=.jsp
 
 # MyBatis
 
-spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.url=jdbc:mysql://mysql.czyvbxhkrbwn.ap-northeast-2.rds.amazonaws.com:3306/world
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=qwer1234
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
-#log를 한층 더 자세하게 보기 위해서 사용
-#trace -> debug -> warn -> info -> error -> fatal 레벨이 존재
 logging.level.com.example.mapper=info
