--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-.tern-project
+
+
+node_modules/
 
 ### STS ###
 .apt_generated
