--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 # MyBatis
 
 spring.datasource.url=jdbc:mysql://mysql.czyvbxhkrbwn.ap-northeast-2.rds.amazonaws.com:3306/world
-spring.datasource.username=root
+spring.datasource.username=admin
 spring.datasource.password=qwer1234
 
 mybatis.configuration.map-underscore-to-camel-case=true
