--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #log를 한층 더 자세하게 보기 위해서 사용
 #trace -> debug -> warn -> info -> error -> fatal 레벨이 존재
 logging.level.com.example.mapper=info
+
+# Security
+spring.security.user.name=python
+spring.security.user.password=1234
